removed the usage of HTTP (replaced with RestTemplate)